# -*- readme-debian -*-

LifeV  1.1.1:
=============

New Features
------------

Distribution 1.2.x will the first public distribution
of the lifev-parallel.
The serial version is continuing on a separate cvs module, lifev-serial.


Obsolete (Branch OBSOLETE)
--------------------------
This are no longer in the head, nor distributed.
Developers can access to these files by cvs co -r OBSOLETE filename .
If the files are not obsolete anymore, they can be merged to the head.

 life/lifealg/PressureMatrixSolver.hpp  \
 life/lifefilters/medit.hpp  \
 life/lifesolver/darcyHandler.hpp  \
 life/lifesolver/darcySolverBase.hpp  \
 life/lifesolver/darcySolver.{hpp,cpp}  \
 life/lifesolver/dataDarcy.hpp  \
 life/lifefem/assembDG.hpp  \
 life/lifefem/refEleDG.{hpp,cpp}  \
 life/lifefem/refFEDG.{hpp,cpp}  \
 life/lifefem/dofDG.{hpp,cpp}  \
 life/lifefem/geoMapDG.{hpp,cpp}  \
 life/lifefem/refHdivFE.{hpp,cpp}  \
 life/lifefem/refHybridFE.{hpp,cpp}  \
 life/lifealg/cblas.hpp  \
 life/lifealg/clapack.hpp  \
 life/lifefem/currentBdDG.{hpp,cpp}  \
 life/lifefem/currentFEDG.{hpp,cpp}  \
 life/lifefem/currentHdivFE.{hpp,cpp}  \
 life/lifefem/currentIFDG.{hpp,cpp} \
 life/lifefem/defQuadRuleHybridFE.cpp


Removed (tagged REMOVED)
------------------------
These files are removed. The last tag that has them is LIFEV_1_1_0.

 life/lifearray/pattern.hpp  \
 life/lifearray/pattern.cpp  \
 life/lifealg/algebraic_facto.hpp  \
 life/lifealg/dataAztec.hpp  \
 life/lifealg/givens.hpp  \
 life/lifealg/gmres.hpp  \
 life/lifealg/inexactLU.hpp  \
 life/lifealg/iteration.hpp  \
 life/lifealg/preconditioner.hpp  \
 life/lifealg/saddlePointCG.hpp  \
 life/lifealg/SolverAztec.hpp  \
 life/lifealg/SolverBase.hpp  \
 life/lifealg/SolverPETSC.{hpp,cpp}  \
 life/lifealg/SolverUMFPACK.{hpp,cpp}  \
 life/lifealg/triDiagCholesky.hpp  \
 life/lifealg/triDiagLU.hpp  \
 life/lifefilters/ensight7Writer.hpp  \
 life/lifefilters/gmsh_wrtrs.hpp  \
 life/lifefilters/gmv_wrtrs.hpp  \