@@ -2,19 +2,19 @@
 # DO NOT EDIT : generated automatically by update-headers
 #
 
-LIFECORE_HDRS=life/lifecore/switch.hpp life/lifecore/GetPot.hpp life/lifecore/util_string.hpp life/lifecore/fortran_wrap.hpp life/lifecore/dataString.hpp life/lifecore/lifeassert.hpp life/lifecore/lifemacros.hpp life/lifecore/debug.hpp life/lifecore/about.hpp life/lifecore/singleton.hpp life/lifecore/policy.hpp life/lifecore/chrono.hpp life/lifecore/lifeversion.hpp life/lifecore/SmartAssert.hpp life/lifecore/factory.hpp life/lifecore/typeInfo.hpp life/lifecore/displayer.hpp life/lifecore/life.hpp life/lifecore/application.hpp 
+LIFECORE_HDRS=life/lifecore/GetPot.hpp life/lifecore/SmartAssert.hpp life/lifecore/about.hpp life/lifecore/application.hpp life/lifecore/chrono.hpp life/lifecore/dataString.hpp life/lifecore/debug.hpp life/lifecore/factory.hpp life/lifecore/fortran_wrap.hpp life/lifecore/life.hpp life/lifecore/lifeassert.hpp life/lifecore/lifemacros.hpp life/lifecore/lifeversion.hpp life/lifecore/policy.hpp life/lifecore/singleton.hpp life/lifecore/switch.hpp life/lifecore/typeInfo.hpp life/lifecore/util_string.hpp life/lifecore/displayer.hpp 
 
-LIFEARRAY_HDRS=life/lifearray/EpetraVector.hpp life/lifearray/elemVec.hpp life/lifearray/RNM.hpp life/lifearray/SimpleVect.hpp life/lifearray/tab.hpp life/lifearray/RNM_op.hpp life/lifearray/RNM_tpl.hpp life/lifearray/EpetraMatrix.hpp life/lifearray/variables.hpp life/lifearray/elemMat.hpp life/lifearray/RNM_opc.hpp life/lifearray/vecUnknown.hpp 
+LIFEARRAY_HDRS=life/lifearray/EpetraMatrix.hpp life/lifearray/EpetraVector.hpp life/lifearray/RNM.hpp life/lifearray/RNM_op.hpp life/lifearray/RNM_opc.hpp life/lifearray/RNM_tpl.hpp life/lifearray/SimpleVect.hpp life/lifearray/elemMat.hpp life/lifearray/elemVec.hpp life/lifearray/tab.hpp life/lifearray/variables.hpp life/lifearray/vecUnknown.hpp 
 
-LIFEALG_HDRS=life/lifealg/newton.hpp life/lifealg/MLPreconditioner.hpp life/lifealg/EpetraMap.hpp life/lifealg/SolverAmesos.hpp life/lifealg/picard.hpp life/lifealg/linesearch_parabolic.hpp life/lifealg/nonLinRichardson.hpp life/lifealg/EpetraPreconditioner.hpp life/lifealg/generalizedAitken.hpp life/lifealg/SolverTrilinos.hpp life/lifealg/linesearch_cubic.hpp life/lifealg/IfpackPreconditioner.hpp life/lifealg/dataNewton.hpp 
+LIFEALG_HDRS=life/lifealg/EpetraMap.hpp life/lifealg/EpetraPreconditioner.hpp life/lifealg/IfpackPreconditioner.hpp life/lifealg/MLPreconditioner.hpp life/lifealg/SolverTrilinos.hpp life/lifealg/dataNewton.hpp life/lifealg/generalizedAitken.hpp life/lifealg/linesearch_cubic.hpp life/lifealg/linesearch_parabolic.hpp life/lifealg/newton.hpp life/lifealg/nonLinRichardson.hpp life/lifealg/picard.hpp life/lifealg/SolverAmesos.hpp 
 
-LIFEMESH_HDRS=life/lifemesh/partitionMesh.hpp life/lifemesh/meshEntity.hpp life/lifemesh/regionMesh2D.hpp life/lifemesh/geoElement.hpp life/lifemesh/regionMesh1D.hpp life/lifemesh/identifier.hpp life/lifemesh/mesh_util_base.hpp life/lifemesh/dataMesh.hpp life/lifemesh/markers.hpp life/lifemesh/markers_base.hpp life/lifemesh/regionMesh3D.hpp life/lifemesh/bareItems.hpp life/lifemesh/basisElSh.hpp life/lifemesh/geo0D.hpp life/lifemesh/geoND.hpp 
+LIFEMESH_HDRS=life/lifemesh/bareItems.hpp life/lifemesh/dataMesh.hpp life/lifemesh/geo0D.hpp life/lifemesh/geoElement.hpp life/lifemesh/geoND.hpp life/lifemesh/identifier.hpp life/lifemesh/markers.hpp life/lifemesh/markers_base.hpp life/lifemesh/meshEntity.hpp life/lifemesh/mesh_util_base.hpp life/lifemesh/partitionMesh.hpp life/lifemesh/regionMesh1D.hpp life/lifemesh/regionMesh2D.hpp life/lifemesh/regionMesh3D.hpp life/lifemesh/basisElSh.hpp 
 
-LIFEFEM_HDRS=life/lifefem/regionMesh3D_ALE.hpp life/lifefem/currentFE.hpp life/lifefem/currentBFDG.hpp life/lifefem/dofInterfaceHandler.hpp life/lifefem/dofInterfaceBase.hpp life/lifefem/assemb.hpp life/lifefem/refEle.hpp life/lifefem/dofInterface3Dto3D.hpp life/lifefem/refFE.hpp life/lifefem/bdf.hpp life/lifefem/dofInterface3Dto2D.hpp life/lifefem/bdf_template.hpp life/lifefem/currentBdFE.hpp life/lifefem/bdfNS_template.hpp life/lifefem/postProc.hpp life/lifefem/BCNormalManager.hpp life/lifefem/bcCond.hpp life/lifefem/bcFunction.hpp life/lifefem/staticBdFE.hpp life/lifefem/dof.hpp life/lifefem/bcHandler.hpp life/lifefem/dataTime.hpp life/lifefem/elemOper.hpp life/lifefem/localDofPattern.hpp life/lifefem/FESpace.hpp life/lifefem/bcVector.hpp life/lifefem/geoMap.hpp life/lifefem/bdfNS.hpp life/lifefem/quadRule.hpp life/lifefem/bcManage.hpp life/lifefem/sobolevNorms.hpp 
+LIFEFEM_HDRS=life/lifefem/FESpace.hpp life/lifefem/assemb.hpp life/lifefem/stiffness_fibers.hpp life/lifefem/bcCond.hpp life/lifefem/bcFunction.hpp life/lifefem/bcHandler.hpp life/lifefem/bcVector.hpp life/lifefem/bdf.hpp life/lifefem/bdfNS.hpp life/lifefem/bdfNS_template.hpp life/lifefem/bdf_template.hpp life/lifefem/currentBFDG.hpp life/lifefem/currentBdFE.hpp life/lifefem/currentFE.hpp life/lifefem/dataTime.hpp life/lifefem/bcManage.hpp life/lifefem/dofInterface3Dto2D.hpp life/lifefem/dofInterface3Dto3D.hpp life/lifefem/dofInterfaceBase.hpp life/lifefem/dofInterfaceHandler.hpp life/lifefem/elemOper.hpp life/lifefem/geoMap.hpp life/lifefem/localDofPattern.hpp life/lifefem/dof.hpp life/lifefem/postProc.hpp life/lifefem/quadRule.hpp life/lifefem/refEle.hpp life/lifefem/refFE.hpp life/lifefem/regionMesh3D_ALE.hpp life/lifefem/sobolevNorms.hpp life/lifefem/staticBdFE.hpp life/lifefem/BCNormalManager.hpp 
 
-LIFESOLVER_HDRS=life/lifesolver/fluidToMaster.hpp life/lifesolver/VenantKirchhofSolver.hpp life/lifesolver/bidomainSolver.hpp life/lifesolver/HarmonicExtensionSolver.hpp life/lifesolver/steklovPoincareBase.hpp life/lifesolver/monodomainSolver.hpp life/lifesolver/AdvectionDiffusionReaction.hpp life/lifesolver/FSIOperator.hpp life/lifesolver/reducedLinFluid.hpp life/lifesolver/AdvectionDiffusionReactionSolver.hpp life/lifesolver/sdStabilization.hpp life/lifesolver/Oseen.hpp life/lifesolver/nsipterms.hpp life/lifesolver/dataADR.hpp life/lifesolver/dataMonodomain.hpp life/lifesolver/dataNavierStokes.hpp life/lifesolver/NavierStokesSolverPC.hpp life/lifesolver/OseenShapeDerivative.hpp life/lifesolver/ionicSolver.hpp life/lifesolver/fixedPointBase.hpp life/lifesolver/ElasticStructureHandler.hpp life/lifesolver/ipStabilization.hpp life/lifesolver/dataElasticStructure.hpp life/lifesolver/exactJacobianBase.hpp life/lifesolver/dataBidomain.hpp life/lifesolver/NavierStokesSolver.hpp life/lifesolver/dataIonic.hpp life/lifesolver/dataSimplifiedStructure.hpp life/lifesolver/FSISolver.hpp life/lifesolver/NavierStokesHandler.hpp 
+LIFESOLVER_HDRS=life/lifesolver/AdvectionDiffusionReaction.hpp life/lifesolver/AdvectionDiffusionReactionSolver.hpp life/lifesolver/ElasticStructureHandler.hpp life/lifesolver/FSIOperator.hpp life/lifesolver/FSISolver.hpp life/lifesolver/HarmonicExtensionSolver.hpp life/lifesolver/NavierStokesHandler.hpp life/lifesolver/NavierStokesSolver.hpp life/lifesolver/NavierStokesSolverPC.hpp life/lifesolver/Oseen.hpp life/lifesolver/OseenShapeDerivative.hpp life/lifesolver/VenantKirchhofSolver.hpp life/lifesolver/bidomainSolver.hpp life/lifesolver/dataADR.hpp life/lifesolver/dataBidomain.hpp life/lifesolver/dataElasticStructure.hpp life/lifesolver/dataIonic.hpp life/lifesolver/dataMonodomain.hpp life/lifesolver/dataNavierStokes.hpp life/lifesolver/dataSimplifiedStructure.hpp life/lifesolver/exactJacobianBase.hpp life/lifesolver/fixedPointBase.hpp life/lifesolver/fluidToMaster.hpp life/lifesolver/ionicSolver.hpp life/lifesolver/ipStabilization.hpp life/lifesolver/monodomainSolver.hpp life/lifesolver/nsipterms.hpp life/lifesolver/reducedLinFluid.hpp life/lifesolver/sdStabilization.hpp life/lifesolver/steklovPoincareBase.hpp 
 
-LIFEFILTERS_HDRS=life/lifefilters/mesh_util.hpp life/lifefilters/hdf5exporter.hpp life/lifefilters/ensight.hpp life/lifefilters/medit_wrtrs.hpp life/lifefilters/readMesh3D.hpp life/lifefilters/noexport.hpp life/lifefilters/importer.hpp life/lifefilters/selectMarker.hpp life/lifefilters/readMesh2D.hpp life/lifefilters/exporter.hpp 
+LIFEFILTERS_HDRS=life/lifefilters/ensight.hpp life/lifefilters/exporter.hpp life/lifefilters/hdf5exporter.hpp life/lifefilters/importer.hpp life/lifefilters/medit_wrtrs.hpp life/lifefilters/mesh_util.hpp life/lifefilters/readMesh2D.hpp life/lifefilters/readMesh3D.hpp life/lifefilters/selectMarker.hpp life/lifefilters/noexport.hpp 
 
 nobase_include_HEADERS=lifeconfig.h\
 $(LIFECORE_HDRS)\
