@@ -1,11 +1,11 @@
 # -*- autoconf -*-
 #
 #
-AC_INIT([lifev], [1.1.1], [lifev-dev@googlegroups.com])
+AC_INIT([lifev], [1.2.2], [lifev-dev@googlegroups.com])
 
 LIFEV_VERSION_MAJOR=1
-LIFEV_VERSION_MINOR=1
-LIFEV_VERSION_MICRO=1
+LIFEV_VERSION_MINOR=2
+LIFEV_VERSION_MICRO=2
 LIFEV_VERSION_EXTRA=
 AC_SUBST(LIFEV_VERSION_MAJOR)
 AC_SUBST(LIFEV_VERSION_MINOR)
